<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/grad_bck"
        tools:context=".MainActivity">

    <TextView
            android:textColor="@color/blanco"
            android:text="@string/main_title"
            android:layout_gravity="center_horizontal"
            android:textSize="35dp"
            android:layout_marginTop="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ImageView
            android:maxHeight="150dp"
            android:minWidth="200dp"
            android:src="@drawable/ic_launcher_background"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:textColor="@color/blanco"
            android:text="@string/btn_learn"
            android:onClick="lrn"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundedbutton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

    <Button
            android:textColor="@color/blanco"
            android:text="@string/btn_upCode"
            android:onClick="ulds"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundedbutton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
    <Button
            android:onClick="xp"
            android:textColor="@color/blanco"
            android:text="@string/btn_experiment"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundedbutton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

    <Button
            android:textColor="@color/blanco"
            android:text="@string/btn_about"
            android:onClick="ab"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundedbutton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

</LinearLayout>